--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -8,12 +8,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <FrameLayout
     android:layout_gravity="center_horizontal"
-    android:layout_width="400dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_margin="20dp"
-        android:padding="10dp"
-        android:layout_width="400dp"
+        android:padding="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
@@ -151,13 +151,11 @@
                     android:orientation="horizontal">
 
 
-
                     <TextView
                         android:id="@+id/text_gm_lebel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
-                        android:text="x100 Gm" />
+                        android:text="x50Gm" />
                     <TextView
 
                         android:layout_width="wrap_content"
@@ -266,7 +264,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:text="Total = Rs."/>
+                android:text="Total Price = Rs."/>
             <TextView
                 android:id="@+id/total"
                 android:layout_width="match_parent"
@@ -277,18 +275,17 @@
                 android:text="0"
                 android:textColor="#000000" />
         </LinearLayout>
-
-        <Button
-            android:visibility="gone"
-            android:id="@+id/button_update_cart_item"
-            android:layout_width="150dp"
+        <TextView
+            android:textSize="10sp"
+            android:id="@+id/total_qt"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="update"
-            android:background="@drawable/back_place_button"
-            android:layout_margin="30dp"
-            android:textColor="@color/colorAccent"/>
+            android:text="Total quantity = 0Kg+000Gms+0Pcs"
+            />
+
 
         <LinearLayout
+
             android:id="@+id/double_button_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -297,7 +294,7 @@
 
             <Button
                 android:id="@+id/add_to_cart_button"
-                android:layout_width="120dp"
+                android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/back_button_item_cart"
@@ -307,16 +304,48 @@
 
             <Button
                 android:id="@+id/buy_now_button"
-                android:layout_width="120dp"
+                android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:layout_marginLeft="30dp"
-                android:background="@drawable/back_button_item_buy"
+                android:background="@drawable/edit_text_box"
                 android:elevation="8dp"
                 android:textColor="@android:color/black"
                 android:text="Cancel" />
 
         </LinearLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/double_button_layout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <Button
+                android:id="@+id/button_update_cart_item"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/back_place_button"
+                android:elevation="8dp"
+                android:textColor="@color/colorAccent"
+                android:text="Update" />
+
+            <Button
+                android:id="@+id/button_ok"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                android:layout_marginLeft="30dp"
+                android:background="@drawable/edit_text_box"
+                android:elevation="8dp"
+                android:textColor="@android:color/black"
+                android:text="ok" />
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 </FrameLayout>
